--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row">
           <header class="text-center col-12">
               <h1 class="text-uppercase">
-                <strong>welkommen til Mohamed Ali Shil hjemmesider</strong>
+                <strong> Mohamed Ali Shil </strong>
               </h1>
               
           </header>
